--- a/DA_623.ipynb
+++ b/DA_623.ipynb
@@ -174,7 +174,7 @@
         "fig, axs = plt.subplots(4,2, figsize = (15,20))\r\n",
         "fig.delaxes(axs[3,1])\r\n",
         "for i in range(0,len(phoneme_name)):\r\n",
-        "    img = librosa.display.specshow(S_db[i], sr=phoneme_list[i][1], hop_length=512, x_axis='time', y_axis='log', ax = axs[int(i/2),i%2])\r\n",
+        "    img = librosa.display.specshow(S_db[i], sr=phoneme_list[i][1], x_axis='time', y_axis='log', ax = axs[int(i/2),i%2])\r\n",
         "    axs[int(i/2),i%2].set_title(\"Spectrogram of '\" + str(phoneme_name[i])+ \"'\")\r\n",
         "    axs[int(i/2),i%2].set_xlabel(\"Time (s)\")\r\n",
         "    axs[int(i/2),i%2].set_ylabel(\"Frequency (Hz)\")\r\n",
