--- a/DA_623.ipynb
+++ b/DA_623.ipynb
@@ -42,6 +42,7 @@
       "cell_type": "code",
       "execution_count": 13,
       "source": [
+        "pip install librosa.diplay\r\n",
         "# Importing necessary libraries\r\n",
         "import os\r\n",
         "import numpy as np\r\n",
